--- a/sass/base/_settings.scss
+++ b/sass/base/_settings.scss
@@ -1,9 +1,9 @@
 
 
-$Very_dark_blue: hsl(233, 47%, 7%);
-$Dark_desaturated_blue: hsl(244, 38%, 16%);
-$Soft_violet: hsl(277, 64%, 61%);
+$main_background: hsl(233, 47%, 7%);
+$card_background: hsl(244, 38%, 16%);
+$accent: hsl(277, 64%, 61%);
 
 $White: hsl(0, 0%, 100%);
-$Slightly_transparent_white: hsla(0, 0%, 100%, 0.75);
-$Slightly_transparent_white: hsla(0, 0%, 100%, 0.6);
+$main_paragraph: hsla(0, 0%, 100%, 0.75);
+$stat_headings: hsla(0, 0%, 100%, 0.6);
