--- a/styles.css
+++ b/styles.css
@@ -11,39 +11,41 @@ body {
 }
 
 .card-container {
-  display: flex;
   align-items: center;
-  justify-content: center;
-  width: 1440px;
+  display: flex;
   height: 100vh;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1440px;
 }
 @media screen and (max-width: 375px) {
   .card-container {
-    width: 100%;
-    margin-top: 3rem;
     align-items: flex-start;
+    margin-top: 3rem;
+    width: 100%;
   }
 }
 
 .card {
+  background-color: #1b1938;
+  border-radius: 10px;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: #1b1938;
-  border-radius: 10px;
 }
 @media screen and (max-width: 375px) {
   .card {
-    width: 85%;
-    height: 72vh;
     flex-direction: column-reverse;
+    height: 72vh;
+    width: 85%;
   }
 }
 
 .card-content {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 @media screen and (max-width: 375px) {
   .card-content {
@@ -53,19 +55,19 @@ body {
 }
 
 .card-content__header {
+  color: white;
   height: 21%;
   margin-left: 5rem;
   margin-top: 3rem;
   margin-right: 9rem;
   text-align: left;
-  color: white;
 }
 @media screen and (max-width: 375px) {
   .card-content__header {
     font-size: 0.75rem;
-    text-align: center;
     margin-left: 1rem;
     margin-right: 2.3rem;
+    text-align: center;
   }
 }
 .card-content__header h1 span {
@@ -73,39 +75,33 @@ body {
 }
 
 .card-content__text {
+  color: rgba(255, 255, 255, 0.75);
+  font-size: 0.9rem;
+  line-height: 1.5rem;
   margin-left: 5rem;
   margin-top: 0.7rem;
   margin-right: 9rem;
-  line-height: 1.5rem;
-  color: rgba(255, 255, 255, 0.75);
-  font-size: 0.9rem;
 }
 @media screen and (max-width: 375px) {
   .card-content__text {
     height: 21%;
-    text-align: center;
     margin-left: 0.9rem;
     margin-top: 1.7rem;
     margin-right: 0.9rem;
+    text-align: center;
   }
 }
 
 .card-content__footer {
-  margin-left: 5rem;
-  margin-right: auto;
-  margin-bottom: 3rem;
-  margin-top: 2rem;
   display: flex;
+  margin: 2rem auto 3rem 5rem;
 }
 @media screen and (max-width: 375px) {
   .card-content__footer {
     height: 50%;
     flex-direction: column;
     justify-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0 auto 0 auto;
   }
 }
 
@@ -133,29 +129,34 @@ body {
 
 .card-image {
   flex: 97%;
-  position: relative;
   background-image: url("images/image-header-desktop.jpg");
   background-repeat: no-repeat;
-  border-radius: 0px 5px 5px 0px;
+  border-radius: 0px 10px 10px 0px;
+  position: relative;
 }
 @media screen and (max-width: 375px) {
   .card-image {
     flex: 0%;
-    width: 100%;
     position: relative;
     background: url("images/image-header-mobile.jpg");
     background-size: cover;
-    border-radius: 5px 5px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
+    width: 100%;
   }
 }
 
 .card-image__gradient {
-  position: absolute;
-  opacity: 0.6;
-  width: 100%;
-  height: 100%;
   background-color: #aa5cdb;
-  border-radius: 0px 5px 5px 0px;
+  border-radius: 0px 10px 10px 0px;
+  height: 100%;
+  opacity: 0.6;
+  position: absolute;
+  width: 100%;
+}
+@media screen and (max-width: 375px) {
+  .card-image__gradient {
+    border-radius: 10px 10px 0px 0px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
