--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,9 @@ body {
 @media screen and (max-width: 375px) {
   .card-container {
     align-items: flex-start;
-    margin-top: 3rem;
+    margin-top: 1rem;
     width: 100%;
+    height: 83vh;
   }
 }
 
@@ -37,8 +38,8 @@ body {
 @media screen and (max-width: 375px) {
   .card {
     flex-direction: column-reverse;
-    height: 72vh;
-    width: 85%;
+    height: 93vh;
+    width: 75%;
   }
 }
 
@@ -49,7 +50,7 @@ body {
 }
 @media screen and (max-width: 375px) {
   .card-content {
-    flex: 43%;
+    flex: 55%;
     width: 100%;
   }
 }
@@ -66,7 +67,8 @@ body {
   .card-content__header {
     font-size: 0.75rem;
     margin-left: 1rem;
-    margin-right: 2.3rem;
+    margin-right: 1.3rem;
+    margin-top: 0rem;
     text-align: center;
   }
 }
@@ -113,6 +115,7 @@ body {
 @media screen and (max-width: 375px) {
   .card-content__footer__item {
     align-items: center;
+    margin: 1rem 0rem 0rem 0;
   }
 }
 .card-content__footer__item p {
@@ -128,7 +131,7 @@ body {
 }
 
 .card-image {
-  flex: 97%;
+  flex: 18%;
   background-image: url("images/image-header-desktop.jpg");
   background-repeat: no-repeat;
   border-radius: 0px 10px 10px 0px;
@@ -136,9 +139,9 @@ body {
 }
 @media screen and (max-width: 375px) {
   .card-image {
-    flex: 0%;
     position: relative;
-    background: url("images/image-header-mobile.jpg");
+    background-image: url("images/image-header-mobile.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px 10px 0px 0px;
     width: 100%;
